Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -13,12 +13,12 @@
     </header>
 
     <!-- Add a nav tag to wrap these nested links instead of a span-->
-    <span>
+    <nav>
       <a href="about.html">About</a> <a href="contact.html">Contact</a> <a href="products.html">Products</a>
-    </span>
+    </nav>
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
-    <div>
+    <main>
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
       <div>
@@ -72,9 +72,9 @@
       </div>
     </div>
     <!-- End of main part of webpage -->
-
+</main>
     <!-- Convert this last div so that the contact information and copyright are contained within a footer tag-->
-    <div>
+    <footer>
       <h3>Contact</h3>
       <p>
         email: <a href="mailto:info@exceptionalrealty.com">info@exceptionalrealty.com</a><br>
