--- a/index.html
+++ b/index.html
@@ -19,38 +19,41 @@
 
     <!-- Replace this div with a main tag to wrap the 'main' content of the webpage-->
     <main>
+     
 
       <!-- Replace this div with a section tag to better describe this portion of content -->
-      <div>
+      <section>
+        </section>
 
         <!-- Wrap the nested img in a figure tag-->
-        <div>
+        <figure>
           <img src="images/intro-pic.jpg" alt="An exceptional living room." title="Welcome to Exceptional Living Rooms">
 
           <!-- Wrap this text in a figcaption tag so that it captions the image above-->
-          <span>"An Exceptional Living Room" by Leonardo DaVinci, photograph</span>
-        </div>
+          <figcaption>"An Exceptional Living Room" by Leonardo DaVinci, photograph</figcaption>
+        </figure>
 
         <!-- Turn this div into an article tag-->
-        <div>
+        <article>
           <p>Lorem ipsum dolor sit amet,<br> consectetur adipisicing elit. Quae, perferendis nisi nihil debitis aspernatur doloribus quam eveniet quibusdam tempora esse! Repudiandae, assumenda, debitis doloribus ea eius ab at quae totam. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Asperiores, inventore aliquid ipsam debitis nulla vitae omnis nemo quisquam? Obcaecati dolor ipsum distinctio reprehenderit aliquid autem ea vel provident voluptas nisi.</p>
           <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Ipsa, natus, nobis, tempore recusandae culpa deleniti dignissimos laborum perspiciatis exercitationem obcaecati dolores unde eveniet eius debitis perferendis provident porro. Ipsum, placeat.</p>
-        </div>
+        </article>
       </div>
 
       <!-- Replace this div with a second section tag to indicate this is a separate portion of content-->
-      <div>
-
+      <section>
+      </section>
         <!-- Wrap the nested video content below with figure tags -->
-        <div>
+        
+        <figure>
           <video controls>
             <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.mp4" type="video/mp4">
             <source src="http://ironboard-curriculum-content.s3.amazonaws.com/front-end/lab-assets/real-estate.ogv" type="video/ogg">
             Your browser does not support HTML5 video. <a href="http://browsehappy.com" target="_blank">Please upgrade your browser</a>.
-          </video>
+          </figure>
 
           <!-- Wrap this text in a figcaption tag so that it captions the video above-->
-          <span>Exceptional Promotional Video - Source: archive.org</span>
+          <figcaption>Exceptional Promotional Video - Source: archive.org</figcaption>
         </div>
       </div>
 
