--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
       </div>
 
       <!-- Replace this div with a third section tag -->
-      <div>
+      <section>
           <h3>Links</h3>
           <p>
             <a href="#" target="_blank">Home Restoration</a><br>
@@ -72,7 +72,7 @@
             <a href="#" target="_blank">Facebook</a><br>
             <a href="#" target="_blank">Twitter</a>
           </p>
-      </div>
+      </section>
     </div>
     <!-- End of main part of webpage -->
 </main>
