--- a/index.html
+++ b/index.html
@@ -86,16 +86,16 @@
       <h3>Correspondence</h3>
 
       <!-- Use the address tag to contain the following address-->
-      <div>
+      <address>
         Exceptional Realty<br>
         P.O.Box 5555<br>
         Brooklyn, NY 11201
-      </div>
+      </address>
 
       <!-- Replace the following div with a details tag -->
-      <div>
+      <details>
         <!-- Replace the following span with a summary tag -->
-        <span>&copy; 2014 Exceptional Realty.</span>
+        <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
       </div>
     </footer>
