Automatically backed up by Learn

--- a/index.html
+++ b/index.html
@@ -94,10 +94,11 @@
 
       <!-- Replace the following div with a details tag -->
       <details>
+
         <!-- Replace the following span with a summary tag -->
         <summary>&copy; 2014 Exceptional Realty.</summary>
         <p>All Rights Reserved.</p>
-      
+      </details>
     </footer>
 
   </body>
